increased test coverage