@@ -15,14 +15,12 @@
  */
 package io.delimeat.http;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
+import java.time.Instant;
 
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
-
-import io.delimeat.http.HttpStatisticsService_Impl;
 
 public class HttpStatisticsService_ImplTest {
 
@@ -34,26 +32,44 @@ public class HttpStatisticsService_ImplTest {
 	}
 	
 	@Test
-	public void addResponseTest() throws URISyntaxException{
-		service.addResponse(new URI("https://test.com"), 200);
-		service.addResponse(new URI("http://test.com"), 200);
-		service.addResponse(new URI("https://test.com"), 404);
-		service.addResponse(new URI("http://test.com"), 503);
-		
-		service.addResponse(new URI("https://alternate.io/dogs"), 500);
-		service.addResponse(new URI("http://alternate.io/stuff"), 500);
+	public void toStringTest(){
+		Assert.assertEquals("HttpStatisticsService_Impl [stats={}]", service.toString());
+	}
+	
+	@Test
+	public void addResponseTest() throws Exception{
+		Instant start = Instant.now();
+		service.addResponse(new URL("https://test.com"), 200);
+		service.addResponse(new URL("http://test.com"), 200);
+
+		service.addResponse(new URL("https://alternate.io/dogs"), 500);
+		service.addResponse(new URL("http://alternate.io/stuff"), 500);
 		
 		Assert.assertEquals(2, service.getStatistics().size());
 		Assert.assertEquals("test.com", service.getStatistics().get(0).getHost());
+		Assert.assertEquals(1, service.getStatistics().get(0).getResponseCounts().size());
+		Assert.assertEquals(2, service.getStatistics().get(0).getResponseCounts().get(200).intValue());
+		Assert.assertNotNull(service.getStatistics().get(0).getLastSuccess());
+		Assert.assertTrue(service.getStatistics().get(0).getLastSuccess().isAfter(start));
+		Assert.assertNull( service.getStatistics().get(0).getLastFailure());
+
+		Instant beforeFailures = Instant.now();
+		Thread.sleep(1000);
+		service.addResponse(new URL("https://test.com"), 404);
+		service.addResponse(new URL("http://test.com"), 503);
+		
 		Assert.assertEquals(3, service.getStatistics().get(0).getResponseCounts().size());
 		Assert.assertEquals(2, service.getStatistics().get(0).getResponseCounts().get(200).intValue());
 		Assert.assertEquals(1, service.getStatistics().get(0).getResponseCounts().get(404).intValue());
 		Assert.assertEquals(1, service.getStatistics().get(0).getResponseCounts().get(503).intValue());
+		Assert.assertNotNull(service.getStatistics().get(0).getLastSuccess());
+		Assert.assertTrue(service.getStatistics().get(0).getLastSuccess().isAfter(start));
+		Assert.assertNotNull( service.getStatistics().get(0).getLastFailure());
+		Assert.assertTrue(service.getStatistics().get(0).getLastFailure().isAfter(beforeFailures));
 		
 		Assert.assertEquals("alternate.io", service.getStatistics().get(1).getHost());
 		Assert.assertEquals(1, service.getStatistics().get(1).getResponseCounts().size());
 		Assert.assertEquals(2, service.getStatistics().get(1).getResponseCounts().get(500).intValue());	
 		
-		System.out.println(service.getStatistics());
 	}
 }
